Add NvidiaGLiNERPIIRecognizer for pii detection. Ref #11

--- a/presidio-analyzer/presidio_analyzer/conf/default_recognizers.yaml
+++ b/presidio-analyzer/presidio_analyzer/conf/default_recognizers.yaml
@@ -286,6 +286,14 @@ recognizers:
     type: predefined
     enabled: false
 
+  # NER-based recognizers (require model downloads)
+  - name: NvidiaGLiNERPIIRecognizer
+    supported_languages:
+    - de
+    - en
+    type: predefined
+    enabled: false
+
   - name: OllamaRecognizer
     class_name: OllamaLangExtractRecognizer
     supported_languages:
