Fix MinistralOllama returning only one entity instead of all

--- a/presidio-analyzer/pyproject.toml
+++ b/presidio-analyzer/pyproject.toml
@@ -81,3 +81,8 @@ diff-cover = "*"
 [tool.coverage.run]
 relative_files = true
 source = ["."]
+
+[tool.pytest.ini_options]
+markers = [
+    "integration: marks tests as integration tests (require external services like Ollama)",
+]
