Add OllamaNERecognizer: LLM-based NER with German format support - Extends LMRecognizer for shared filtering/consolidation - Adds AGE and DE_POSTAL_CODE to default entities - Conditional German prompts (age: 45-jährig, postal: PLZ 12345) - Label normalization (NAME→PERSON, PLZ→DE_POSTAL_CODE) - Default model: ministral-3:8b

--- a/presidio-analyzer/presidio_analyzer/conf/default_recognizers.yaml
+++ b/presidio-analyzer/presidio_analyzer/conf/default_recognizers.yaml
@@ -311,7 +311,7 @@ recognizers:
     type: predefined
     enabled: false
 
-  - name: MinistralOllamaRecognizer
+  - name: OllamaNERecognizer
     supported_languages:
     - de
     - en
